// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LicenceSignIn renders if url is defined 1`] = `
<div class="ncf__center">
  <p>
    Have you already joined the  account?
  </p>
  <div>
    <a href="https://mytest.com"
       class="ncf__button--secondary ncf__button--mid-width"
    >
      Sign in
    </a>
  </div>
</div>
`;

exports[`LicenceSignIn renders with custom display name 1`] = `
<div class="ncf__center">
  <p>
    Have you already joined the
    <span class="ncf__bold-licence-text">
      Display name text
    </span>
    account?
  </p>
</div>
`;

exports[`LicenceSignIn renders with default props 1`] = `
<div class="ncf__center">
  <p>
    Have you already joined the  account?
  </p>
</div>
`;
